--- a/package.json
+++ b/package.json
@@ -20,18 +20,23 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@stripe/stripe-js": "^8.7.0",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide": "^0.562.0",
     "lucide-react": "^0.562.0",
     "mongodb": "^7.0.0",
-    "next": "16.1.3",
+    "next": "^16.1.3",
     "next-auth": "^4.24.13",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
+    "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "react-icons": "^5.5.0",
+    "stripe": "^20.3.0",
     "sweetalert2": "^11.26.17",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.6"
