--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.31.0",
     "lucide": "^0.562.0",
     "lucide-react": "^0.562.0",
     "mongodb": "^7.0.0",
