--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.31.0",
+    "jose": "^6.1.3",
     "lucide": "^0.562.0",
     "lucide-react": "^0.562.0",
     "mongodb": "^7.0.0",
