--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jose": "^6.1.3",
     "lucide": "^0.562.0",
     "lucide-react": "^0.562.0",
+    "modules": "^0.4.0",
     "mongodb": "^7.0.0",
     "next": "^16.1.3",
     "next-auth": "^4.24.13",
@@ -40,6 +41,7 @@
     "react-icons": "^5.5.0",
     "stripe": "^20.3.0",
     "sweetalert2": "^11.26.17",
+    "swiper": "^12.1.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.6"
   },
