--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongodb": "^7.0.0",
     "next": "^16.1.3",
     "next-auth": "^4.24.13",
+    "nodemailer": "^7.0.13",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
