--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "react-icons": "^5.5.0",
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3",
     "stripe": "^20.3.0",
     "sweetalert2": "^11.26.17",
     "swiper": "^12.1.0",
